--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:padding="24dp"
+    android:background="#7FC8F6">
+
+    <ImageView
+        android:layout_marginHorizontal="16dp"
+        android:id="@+id/imgWelcome"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/welcome"
+        android:contentDescription="Welcome Image"
+        android:layout_marginBottom="24dp"
+        android:scaleType="centerCrop"/>
 
     <TextView
+        android:layout_marginHorizontal="16dp"
+        android:id="@+id/txtWelcome"
+        android:text="Selamat Datang Tour Guide App"
+        android:textSize="22sp"
+        android:textStyle="bold"
+        android:layout_marginBottom="16dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:textColor="#000000"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_marginHorizontal="16dp"
+        android:id="@+id/txtDesc"
+        android:text="Aplikasi untuk booking TourGuide"
+        android:textSize="16sp"
+        android:layout_marginBottom="24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"/>
+
+    <Button
+        android:layout_marginHorizontal="16dp"
+        android:id="@+id/btnContinue"
+        android:text="Continue"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#49C344"
+        android:textColor="#FFFFFF"/>
+
+</LinearLayout>
