--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -31,7 +31,7 @@
 
             <EditText
                 android:id="@+id/etSearch"
-                android:hint="Search tour guide..."
+                android:hint="Cari Kota"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
                 android:padding="12dp"
@@ -58,6 +58,7 @@
                 android:layout_height="wrap_content">
 
                 <LinearLayout
+                    android:id="@+id/itemJakarta"
                     android:orientation="vertical"
                     android:padding="12dp"
                     android:layout_marginBottom="18dp"
@@ -87,6 +88,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/itemMalang"
                     android:orientation="vertical"
                     android:padding="12dp"
                     android:layout_marginBottom="18dp"
@@ -117,6 +119,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/itemBatu"
                     android:orientation="vertical"
                     android:padding="12dp"
                     android:layout_marginBottom="18dp"
@@ -147,6 +150,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/itemBali"
                     android:orientation="vertical"
                     android:padding="12dp"
                     android:layout_marginBottom="18dp"
@@ -177,6 +181,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/itemYogyakarta"
                     android:orientation="vertical"
                     android:padding="12dp"
                     android:layout_marginBottom="18dp"
@@ -207,6 +212,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/itemSurabaya"
                     android:orientation="vertical"
                     android:padding="12dp"
                     android:layout_marginBottom="18dp"
