--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -64,31 +64,58 @@
         android:layout_marginBottom="16dp"
         android:background="@android:drawable/edit_text"/>
 
-            <!-- Upload Bukti Pembayaran -->
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Upload Bukti Pembayaran"-->
-<!--                android:textSize="16sp"-->
-<!--                android:layout_marginBottom="8dp"/>-->
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pembayaran"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"/>
+
+    <!--QR -->
+    <ImageView
+        android:id="@+id/imgQR"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:src="@drawable/qr_dummy"
+        android:scaleType="centerInside"
+        android:background="#FFFFFF"
+        android:layout_marginBottom="8dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Transfer ke:\nBCA 1234567890\nTour Guide App"
+        android:textSize="14sp"
+        android:layout_marginBottom="16dp"/>
+
+    <!-- Upload Bukti Pembayaran -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Upload Bukti Pembayaran"
+        android:textSize="16sp"
+        android:layout_marginBottom="8dp"/>
 
 
-<!--            <ImageView-->
-<!--                android:id="@+id/imgBukti"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="200dp"-->
-<!--                android:background="#EEEEEE"-->
-<!--                android:scaleType="centerCrop"-->
-<!--                android:layout_marginBottom="8dp"-->
-<!--                android:contentDescription="Preview bukti pembayaran"/>-->
+    <ImageView
+        android:id="@+id/imgBukti"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="#EEEEEE"
+        android:scaleType="centerCrop"
+        android:layout_marginBottom="8dp"
+        android:contentDescription="Preview bukti pembayaran"/>
 
 
-<!--            <Button-->
-<!--                android:id="@+id/btnUpload"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Pilih File / Upload"-->
-<!--                android:layout_marginBottom="24dp"/>-->
+    <Button
+        android:id="@+id/btnUpload"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Pilih File / Upload"
+        android:layout_marginBottom="24dp"/>
 
     <Button
         android:id="@+id/btnSubmitBooking"
