--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,257 +6,47 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeActivity"
-    android:padding="0dp"
     android:background="#7FC8F6"
     android:orientation="vertical">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:orientation="vertical"
         android:padding="16dp">
 
-        <LinearLayout
-            android:orientation="vertical"
+        <EditText
+            android:id="@+id/etSearch"
+            android:hint="Cari Kota Wisata..."
             android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:paddingHorizontal="16dp"
+            android:background="@drawable/bg_search_white"
+            android:layout_marginBottom="16dp"
+            android:inputType="text"/>
+
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp">
+            android:text="Rekomendasi Tour Guide"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="12dp"/>
 
-<!--            <Button-->
-<!--                android:id="@+id/btnHistory"-->
-<!--                android:text="History Booking"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"/>-->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvTours"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/item_tour" />
 
+    </LinearLayout>
 
-            <EditText
-                android:id="@+id/etSearch"
-                android:hint="Cari Kota"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:padding="12dp"
-                android:background="@android:drawable/edit_text"
-                android:drawableStart="@android:drawable/ic_menu_search"
-                android:drawablePadding="10dp"
-                android:layout_marginBottom="20dp"/>
-
-            <ImageView
-                android:id="@+id/imgBanner"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:src="@drawable/banner2"
-                android:scaleType="centerCrop"
-                android:background="@android:color/darker_gray"
-                android:layout_marginBottom="24dp"
-                android:clipToOutline="true"
-                android:foreground="?attr/selectableItemBackground"/>
-
-            <LinearLayout
-                android:id="@+id/containerTours"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <LinearLayout
-                    android:id="@+id/itemJakarta"
-                    android:orientation="vertical"
-                    android:padding="12dp"
-                    android:layout_marginBottom="18dp"
-                    android:background="#FFFFFF"
-                    android:elevation="4dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:clipToOutline="true">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="160dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/jakarta1"
-                        android:background="@android:color/darker_gray"
-                        android:clipToOutline="true" />
-
-                    <TextView
-                        android:text="Jakarta"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        android:textColor="#212121"
-                        android:layout_marginTop="10dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/itemMalang"
-                    android:orientation="vertical"
-                    android:padding="12dp"
-                    android:layout_marginBottom="18dp"
-                    android:background="#FFFFFF"
-                    android:elevation="4dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:clipToOutline="true">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="160dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/malang1"
-                        android:background="@android:color/darker_gray"
-                        android:clipToOutline="true" />
-
-                    <TextView
-                        android:text="Malang"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        android:textColor="#212121"
-                        android:layout_marginTop="10dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/itemBatu"
-                    android:orientation="vertical"
-                    android:padding="12dp"
-                    android:layout_marginBottom="18dp"
-                    android:background="#FFFFFF"
-                    android:elevation="4dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:clipToOutline="true">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="160dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/batu1"
-                        android:background="@android:color/darker_gray"
-                        android:clipToOutline="true" />
-
-                    <TextView
-                        android:text="Batu"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        android:textColor="#212121"
-                        android:layout_marginTop="10dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/itemBali"
-                    android:orientation="vertical"
-                    android:padding="12dp"
-                    android:layout_marginBottom="18dp"
-                    android:background="#FFFFFF"
-                    android:elevation="4dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:clipToOutline="true">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="160dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/bali1"
-                        android:background="@android:color/darker_gray"
-                        android:clipToOutline="true" />
-
-                    <TextView
-                        android:text="Bali"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        android:textColor="#212121"
-                        android:layout_marginTop="10dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/itemYogyakarta"
-                    android:orientation="vertical"
-                    android:padding="12dp"
-                    android:layout_marginBottom="18dp"
-                    android:background="#FFFFFF"
-                    android:elevation="4dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:clipToOutline="true">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="160dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/yogyakarta1"
-                        android:background="@android:color/darker_gray"
-                        android:clipToOutline="true" />
-
-                    <TextView
-                        android:text="Yogyakarta"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        android:textColor="#212121"
-                        android:layout_marginTop="10dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/itemSurabaya"
-                    android:orientation="vertical"
-                    android:padding="12dp"
-                    android:layout_marginBottom="18dp"
-                    android:background="#FFFFFF"
-                    android:elevation="4dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:clipToOutline="true">
-
-                    <ImageView
-                        android:layout_width="match_parent"
-                        android:layout_height="160dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/surabaya1"
-                        android:background="@android:color/darker_gray"
-                        android:clipToOutline="true" />
-
-                    <TextView
-                        android:text="Surabaya"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        android:textColor="#212121"
-                        android:layout_marginTop="10dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-
-                </LinearLayout>
-            </LinearLayout>
-
-        </LinearLayout>
-
-    </ScrollView>
-
-    <!-- Bagian footer nya-->
     <LinearLayout
-        android:id="@+id/footerNav"
         android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:orientation="horizontal"
+        android:layout_height="60dp"
         android:background="#FFFFFF"
-        android:padding="8dp"
-        android:elevation="8dp"
-        android:gravity="center"
-        >
+        android:orientation="horizontal">
 
         <LinearLayout
             android:id="@+id/btnFooterHome"
@@ -265,15 +55,12 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical">
-
             <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:src="@drawable/outline_add_home_24" />
-
             <TextView
                 android:text="Home"
-                android:textColor="#000"
                 android:textSize="12sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
@@ -286,15 +73,12 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical">
-
             <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:src="@drawable/outline_article_history_24" />
-
             <TextView
                 android:text="History"
-                android:textColor="#000"
                 android:textSize="12sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
