--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:paddingHorizontal="16dp"
-            android:background="@drawable/bg_search_white"
+            android:background="@drawable/search_btn"
             android:layout_marginBottom="16dp"
             android:inputType="text"/>
 
