--- a/app/src/main/res/layout/activity_booking.xml
+++ b/app/src/main/res/layout/activity_booking.xml
@@ -2,12 +2,17 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:padding="16dp"
+    tools:context=".BookingActivity"
+    android:id="@+id/main"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <LinearLayout
       android:orientation="vertical"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content">
+      android:layout_height="wrap_content"
+      android:layout_marginHorizontal="16dp">
 
     <TextView
         android:id="@+id/tvBookingJudul"
@@ -17,6 +22,14 @@
         android:textSize="22sp"
         android:textStyle="bold"
         android:layout_marginBottom="20dp"/>
+
+    <ImageView
+        android:id="@+id/btnBack2"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:src="@drawable/back"
+        android:padding="4dp"
+        android:layout_marginBottom="12dp" />
 
     <EditText
         android:id="@+id/etNama"
